@@ -1,5 +1,9 @@
 2002-08-06  John Levon  <levon@movementarian.org>
 
+	* pspell.C: fix a crash, and allow new aspell to work
+ 
+2002-08-06  John Levon  <levon@movementarian.org>
+
 	* lyxfunc.C:
 	* kbmap.C: small cleanup
  
